Update to latest version of ecj